@@ -31,12 +31,14 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [fix] re-write of the usb-bcd code so that only the device in use is opened/closed as equired. Also recovers state at startup
 - [fix] fix issue where if diversity gain/phase locks are on changing band would overwrite the new band with the locked values. Now new band values are applied then locked if needed
 - [fix] menu bar has text size fixed like all other control so size/height does not change with OS text scale. Fixes cut off vfoA/B group box labels
+- [fix] scope time base differences between RX and TX should be resolved
 - [change] wav file recording volume is normalised to ignore RX AF. Note: when muted/0vol recording is 'silent'
 - [change] finder will now gather info using multiple threads at a time. Some users were reporting startup time delay
 - [change] skinserver now attempts to select skin when downloaded and shows 'wait' mouse pointer whilst changing
 - [change] sql reworked to fix collapsed view analogue slider issues. Will require you to setup your sql/vsql levels again
 - [change] protocol tri state checkbox changed over to 3 radio buttons, one to select each protocol, and one to select auto
 - [change] vfosync in diversity form now mirrors state at top of main console
+- [change] scope display time is now in ms, and will take that long to fill the width of the view
 
 ## v2.10.3.4 Change Log
 - [add] show on startup options for ampview and linearity/ps window. Set in the linearity/ps window
